# habitica

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habitica/: apps.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_52cc528091657772_0001_initial_py.html  z_52cc528091657772_0002_initial_py.html  z_52cc528091657772_0003_habit_last_notified_alter_habit_time_py.html  z_52cc528091657772_0004_habit_last_completed_py.html  z_52cc528091657772___init___py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fa76f7aa8410f792___init___py.html  z_fa76f7aa8410f792_admin_py.html  z_fa76f7aa8410f792_apps_py.html  z_fa76f7aa8410f792_models_py.html  z_fa76f7aa8410f792_pagination_py.html  z_fa76f7aa8410f792_permissions_py.html  z_fa76f7aa8410f792_serializers_py.html  z_fa76f7aa8410f792_services_py.html  z_fa76f7aa8410f792_tasks_py.html  z_fa76f7aa8410f792_tests_py.html  (+6 more)
users/: admin.py  (+4 more)
(+12 files in other folders)
